fixed dodgy image alignment

--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ li {
 
 .logo-box {
     float: right;
-    margin: 0 50px 80px 30px;
+    margin: 0 70px 80px 30px;
     padding: 10px;
     height: 150px;
     width: 150px;
